2010-03-24  Alan McGovern  <amcgovern@novell.com>

	* brush.cpp: If there's no source yet, just render
	  transparent. Fixes drt 872.

2010-03-24  Alan McGovern  <amcgovern@novell.com>

	* media.cpp: If there's no BitmapImage we need to create one
	  as the default value for SourceProperty is NULL in SL3+.

2010-03-23  Larry Ewing  <lewing@novell.com>

	* shape.cpp (ComputeStretchBounds): work around the the outside of
	layout case until the we have a better plan.  

	Fixes the missing pause button on the experience smooth streaming site

2010-03-23  Larry Ewing  <lewing@novell.com>

	* dependencyproperty.cpp (GetDefaultValue): actually look up the
	default value on the parent type when walking up.  Also only
	initialize default_value_overrides when an override is used, this
	saves us from always walking up the classes and wasting lots of
	time. Saves 3-4% on an iis profile.
	(Dispose): only destroy the talk if it is there.

2010-03-23  Chris Toshok  <toshok@ximian.com>

	* xaml.cpp (XamlElementInstance::FindPropertyElement): we should
	be setting the PropertyOwnerKind on the result of this call, not
	on our own info. Fixes some bugs re: custom attached properties as
	used by System.Windows.Interactivity.

2010-03-23  David Reveman  <davidr@novell.com>

	* projection.h:
	* projection.cpp: Add Invert function to Matrix3D class.

2010-03-23  Larry Ewing  <lewing@novell.com>

	* brush.cpp (OnCollectionItemChanged): reverse the ignore
	condition for the collection change handler.

	Fixs the smooth streaming play button gradient.

2010-03-23  Chris Toshok  <toshok@ximian.com>

	* color.cpp (color_from_str): use a binary search here.

2010-03-23  Alan McGovern  <amcgovern@novell.com>

	* shape.h:
	* stylus.h:
	* geometry.h:
	* transform.h:
	* deployment.h: Mark all the properties whose default value
	  does not show up in PropertyMetadata.DefaultValue with
	  "HiddenDefaultValue"

	* brush.h:
	* brush.cpp:
	* media.cpp: