@@ -49,7 +49,7 @@ bool install_dialog_get_install_to_desktop (InstallDialog *dialog);
 bool install_dialog_install (InstallDialog *dialog);
 
 /* utility functions useful outside of the dialog */
-char *install_utils_get_app_name (OutOfBrowserSettings *settings);
+char *install_utils_get_app_safe_name (OutOfBrowserSettings *settings);
 char *install_utils_get_install_dir (OutOfBrowserSettings *settings);
 char *install_utils_get_desktop_shortcut (OutOfBrowserSettings *settings);
 char *install_utils_get_start_menu_shortcut (OutOfBrowserSettings *settings);
